tests/snapshots/snapshots__transactions_share-receipt.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Send a transaction receipt to a customer (POST /v2/transactions/{transactionId}/share-receipt)

Usage: flute2 transactions share-receipt [OPTIONS] --share-by <SHARE_BY> --recipient <RECIPIENT> <TRANSACTION_ID>

Arguments:
  <TRANSACTION_ID>  Transaction UUID (positional)

Options:
      --share-by <SHARE_BY>    How to send the receipt. `sms` is the only channel the API accepts [possible values: sms]
      --recipient <RECIPIENT>  Customer mobile number in E.164 form, for an SMS receipt
      --consent                The customer has consented to receive the receipt (required)
  -h, --help                   Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
