tests/snapshots/snapshots__transactions_tip-adjust.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Adjust the tip on a transaction (POST /v2/transactions/{transactionId}/tip-adjustment)

Usage: flute2 transactions tip-adjust [OPTIONS] --transaction-id <TRANSACTION_ID>

Options:
      --transaction-id <TRANSACTION_ID>  UUID of the transaction to adjust (required)
      --tip-amount <TIP_AMOUNT>          New tip amount. Plain decimal, e.g. `3.50`
      --tip-rate <TIP_RATE>              New tip rate as a percentage, e.g. `18.5` for 18.5%
  -h, --help                             Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
